# test-project-python

./: README.md  dependency-check-report.html  main.py  pyproject.toml  requirements-versiontester.txt  requirements.txt
dev/: requirements-dev.txt
